Added attiny platform Cleaned code

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,8 +7,15 @@
 ;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
+[platformio]
+env_default = DigiSpark
 
 [env:pro16MHzatmega328]
 platform = atmelavr
 board = pro16MHzatmega328
+framework = arduino
+
+[env:DigiSpark]
+platform = atmelavr
+board = digispark-tiny
 framework = arduino
